--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=vgcube_db
-DB_USERNAME=vgcube_admin
-DB_PASSWORD=FlJlV2U!H%sf
+DB_DATABASE=vs_db
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 BROADCAST_DRIVER=log
