--- a/.env
+++ b/.env
@@ -58,3 +58,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+TELEGRAM_BOT_TOKEN=7672325130:AAHYVe5B4fz7IIXUk3L9Xm7H9TuJJ0rardw
+TELEGRAM_API_URL=https://core.telegram.org/bots/api
